--- a/dashboard-lovable.css
+++ b/dashboard-lovable.css
@@ -1820,24 +1820,30 @@ body.dark-mode .modal-content p {
     font-size: 0.85rem;
     font-weight: 600;
     display: block;
+    width: 100%;
     line-height: 1.3;
     margin-bottom: 4px;
+    clear: both;
 }
 
 .cronograma-tabela li .topico {
     color: #1c3d5a;
     font-size: 0.75rem;
     display: block;
+    width: 100%;
     line-height: 1.3;
     margin-bottom: 3px;
+    clear: both;
 }
 
 .cronograma-tabela li .tipo-e-duracao {
     color: #6b7280;
     font-size: 0.7rem;
     display: block;
+    width: 100%;
     font-style: italic;
     line-height: 1.3;
+    clear: both;
 }
 
 /* Dark Mode para a Tabela */
